--- a/demo-a.mdx
+++ b/demo-a.mdx
@@ -61,7 +61,7 @@ export const App = () => {
 }
 ```
 
-```jsx 10 title=""1️⃣ Toggle Modal Visibility 👀" subtitle="setVisible to false 🙈 on Modal close"
+```jsx 10 title="1️⃣ Toggle Modal Visibility 👀" subtitle="setVisible to false 🙈 on Modal close"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
