--- a/demo-b.mdx
+++ b/demo-b.mdx
@@ -48,7 +48,7 @@ export const App = () => {
 }
 ```
 
-```jsx 8:13,24 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="2️⃣ Differentiate stateValue based on 'visible' & 'editing' state"
+```jsx 8:13,24 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="2️⃣ Derive stateValue based on 'visible' & 'editing' state"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
