--- a/introduction.mdx
+++ b/introduction.mdx
@@ -28,7 +28,8 @@ import { Appear, Image, Notes } from 'mdx-deck'
 - A small replica of my personal journey with:
   - State Machines, especially [xstate](https://xstate.js.org/) in particular
   - [React Hooks](https://reactjs.org/docs/hooks-intro.html)
-- **How** to combine them together
+- How to combine them together
+  - **A LOT** of code, buckle up!
 
 ---
 
@@ -103,7 +104,13 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
-<Image src={require('file-loader!./images/designers-flow-diagram.png')} />
+## I got this from the designer
+
+<Image
+  src={require('file-loader!./images/designers-flow-diagram.png')}
+  alt="Flow Diagram example"
+  style={{ margin: 'auto', height: '70vh', backgroundSize: 'contain' }}
+/>
 
 ---
 
