--- a/demo-d.mdx
+++ b/demo-d.mdx
@@ -65,7 +65,7 @@ export const App = () => {
 }
 ```
 
-```jsx 8 title="4️⃣ Add List Screen 🗒" subtitle="4️⃣ Add 'index' useState"
+```jsx 8 title="4️⃣ Add List Screen 🗒" subtitle="Add 'index' useState"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -114,7 +114,7 @@ export const App = () => {
 }
 ```
 
-```jsx 11:18 title="4️⃣ Add List Screen 🗒" subtitle="4️⃣ Incorporate 'index' state into the stateValue determination"
+```jsx 11:18 title="4️⃣ Add List Screen 🗒" subtitle="Incorporate 'index' state into the stateValue determination"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -170,7 +170,7 @@ export const App = () => {
 }
 ```
 
-```jsx 28:35 title="4️⃣ Add List Screen 🗒" subtitle="4️⃣ Update Buttons"
+```jsx 28:35 title="4️⃣ Add List Screen 🗒" subtitle="Update Buttons"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -234,7 +234,7 @@ export const App = () => {
 }
 ```
 
-```jsx 50,57,59:60 title="4️⃣ Add List Screen 🗒" subtitle="4️⃣ Update Event Propagations"
+```jsx 50,57,59:60 title="4️⃣ Add List Screen 🗒" subtitle="Update Event Propagations"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -434,7 +434,7 @@ export const modalMachine = Machine(
 )
 ```
 
-```jsx 17:20 title="4️⃣ State Machine Definition ⚙️" subtitle="4️⃣ Add a new guard for single data"
+```jsx 17:20 title="4️⃣ State Machine Definition ⚙️" subtitle="Add a new guard for single data"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine(
@@ -488,7 +488,7 @@ export const modalMachine = Machine(
 )
 ```
 
-```jsx 13:14,18 title="4️⃣ State Machine Definition ⚙️" subtitle="4️⃣ Now it gets harder to read"
+```jsx 13:14,18 title="4️⃣ State Machine Definition ⚙️" subtitle="Now it gets harder to read"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine(
@@ -542,7 +542,7 @@ export const modalMachine = Machine(
 )
 ```
 
-```jsx 13,17 title="4️⃣ State Machine Definition ⚙️" subtitle="4️⃣ Alias the conditions to increase readability"
+```jsx 13,17 title="4️⃣ State Machine Definition ⚙️" subtitle="Alias the conditions to increase readability"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine(
@@ -595,7 +595,7 @@ export const modalMachine = Machine(
 )
 ```
 
-```jsx 49:55 title="4️⃣ State Machine Definition ⚙️" subtitle="4️⃣ Define the guards at the second argument"
+```jsx 49:55 title="4️⃣ State Machine Definition ⚙️" subtitle="Define the guards at the second argument"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine(
@@ -654,7 +654,7 @@ export const modalMachine = Machine(
 )
 ```
 
-```jsx 28,30:34,38 title="4️⃣ State Machine Definition ⚙️" subtitle="4️⃣ Define another 'list' state"
+```jsx 28,30:34,38 title="4️⃣ State Machine Definition ⚙️" subtitle="Define another 'list' state"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine(
@@ -831,7 +831,7 @@ export const App = () => {
 }
 ```
 
-```jsx 11:13 title="4️⃣ App with State Machine 🛠" subtitle="4️⃣ Add another button for multiple data"
+```jsx 11:13 title="4️⃣ App with State Machine 🛠" subtitle="Add another button for multiple data"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
@@ -862,7 +862,7 @@ export const App = () => {
 }
 ```
 
-```jsx 24:25 title="4️⃣ App with State Machine 🛠" subtitle="4️⃣ Simply send 'BACK' & 'VIEW' events"
+```jsx 24:25 title="4️⃣ App with State Machine 🛠" subtitle="Simply send 'BACK' & 'VIEW' events"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
@@ -895,7 +895,7 @@ export const App = () => {
 }
 ```
 
-```jsx 11:13,24:25 title="4️⃣ App with State Machine 🛠" subtitle="4️⃣ That's it!"
+```jsx 11:13,24:25 title="4️⃣ App with State Machine 🛠" subtitle="That's it!"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
