--- a/demo-b.mdx
+++ b/demo-b.mdx
@@ -31,7 +31,7 @@ export const App = () => {
 }
 ```
 
-```jsx 6 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="2️⃣ Add 'editing' useState"
+```jsx 6 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="Add 'editing' useState"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -48,7 +48,7 @@ export const App = () => {
 }
 ```
 
-```jsx 8:13,24 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="2️⃣ Derive stateValue based on 'visible' & 'editing' state"
+```jsx 8:13,24 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="Derive stateValue based on 'visible' & 'editing' state"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -79,7 +79,7 @@ export const App = () => {
 }
 ```
 
-```jsx 21,23,24:27 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="2️⃣ Propagate events to the corresponding state changes"
+```jsx 21,23,24:27 title="2️⃣ Differentiate View & Edit Screens 📝" subtitle="Propagate events to the corresponding state changes"
 import React, { useState } from 'react'
 import { Button, Modal } from '../shared/Components'
 
@@ -163,7 +163,7 @@ Introducing **Hierarchical State**
 
 <CodeSurferLayout>
 
-```jsx 7:11,12:17 title="2️⃣ State Machine Definition ⚙️" subtitle="2️⃣ Introducing Hierarchical State"
+```jsx 7:11,12:17 title="2️⃣ State Machine Definition ⚙️" subtitle="Introducing Hierarchical State"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine({
@@ -185,7 +185,7 @@ export const modalMachine = Machine({
 })
 ```
 
-```jsx 16:28 title="2️⃣ State Machine Definition ⚙️" subtitle="2️⃣ Add states inside 'visible' state"
+```jsx 16:28 title="2️⃣ State Machine Definition ⚙️" subtitle="Add states inside 'visible' state"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine({
@@ -219,7 +219,7 @@ export const modalMachine = Machine({
 })
 ```
 
-```jsx 8,26 title="2️⃣ State Machine Definition ⚙️" subtitle="2️⃣ Target parent state by using #id"
+```jsx 8,26 title="2️⃣ State Machine Definition ⚙️" subtitle="Target parent state by using #id"
 import { Machine } from 'xstate'
 
 export const modalMachine = Machine({
@@ -331,7 +331,30 @@ export const App = () => {
 }
 ```
 
-```jsx 16 title="2️⃣ App with State Machine 🛠" subtitle="2️⃣ Pass down 'visible' substates as the stateValue"
+```jsx 6 title="2️⃣ App with State Machine 🛠" subtitle="Pass down 'visible' substates as the stateValue"
+import React from 'react'
+import { Button, Modal } from '../shared/Components'
+import { useMachine } from '../shared/useMachine'
+import { modalMachine } from './machine'
+
+export const App = () => {
+  const [current, send] = useMachine(modalMachine, { devTools: true })
+
+  return (
+    <main className="app">
+      <Button onClick={() => send('OPEN')}>Open Modal</Button>
+      <Modal
+        onClose={() => send('CLOSE')}
+        onEdit={}
+        onSubmit={}
+        stateValue={current.value === 'visible'}
+      />
+    </main>
+  )
+}
+```
+
+```jsx 16 title="2️⃣ App with State Machine 🛠" subtitle="Pass down 'visible' substates as the stateValue"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
@@ -354,7 +377,7 @@ export const App = () => {
 }
 ```
 
-```jsx 14:15 title="2️⃣ App with State Machine 🛠" subtitle="2️⃣ Simply send 'EDIT' & 'SUBMIT' events"
+```jsx 14:15 title="2️⃣ App with State Machine 🛠" subtitle="Simply send 'EDIT' & 'SUBMIT' events"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
