Add small details

--- a/conclusion.mdx
+++ b/conclusion.mdx
@@ -92,4 +92,11 @@ import { Appear } from 'mdx-deck'
 
 ---
 
-# Thanks
+# Thank You
+
+- David Khourshid [@davidkpiano](https://twitter.com/davidkpiano)<br />
+  for his amazing [xstate](https://xstate.js.org/) library
+- Rodrigo Pombo [@pomber](https://twitter.com/pomber)<br />
+  for his amazing [code-surfer@2.0.0-alpha5](https://www.npmjs.com/package/code-surfer/v/2.0.0-alpha.5)
+
+Slides at https://bit.ly/jsconf-asia-2019-state-machines
