--- a/demo-b.mdx
+++ b/demo-b.mdx
@@ -331,7 +331,7 @@ export const App = () => {
 }
 ```
 
-```jsx 6 title="2️⃣ App with State Machine 🛠" subtitle="Pass down 'visible' substates as the stateValue"
+```jsx 16 title="2️⃣ App with State Machine 🛠" subtitle="We need to change the value that we're passing"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
