--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,6 +2,10 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 # [State Machines](https://xstate.js.org/) Meet [React Hooks](https://reactjs.org/docs/hooks-intro.html)
 
+## JSConf Asia 2019
+
+[@zainfathoni](https://twitter.com/zainfathoni)
+
 ---
 
 # I am [Zain Fathoni](https://github.com/zainfathoni) 🤝
@@ -14,9 +18,6 @@ import { Appear, Image, Notes } from 'mdx-deck'
     </li>
     <li>Backend turned Frontend 👨🏻‍💻</li>
     <li>❤️ React & its Hooks ⚛️</li>
-    <li>
-      <a href="https://twitter.com/zainfathoni">@zainfathoni</a> on Twitter
-    </li>
   </Appear>
 </ul>
 
@@ -35,12 +36,8 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 # What this talk is _not_ 😅
 
-<ul>
-  <Appear>
-    <li>An introduction to React Hooks</li>
-    <li>A deep dig down of State Machines concepts</li>
-  </Appear>
-</ul>
+- An introduction to React Hooks
+- A deep dig down of State Machines concepts
 
 <Notes>
   <ul>
@@ -65,7 +62,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
     <li>Complex UI flows require multiple states</li>
     <li>Multiple states are generally too implicit</li>
     <li>Implicit codes are harder to reason about</li>
-    <li>Hidden bugs everywhere due to "invisible states"</li>
+    <li>This causes hidden bugs everywhere due to "invisible states"</li>
   </Appear>
 </ul>
 
@@ -88,7 +85,6 @@ import { Appear, Image, Notes } from 'mdx-deck'
         Why?
       </a>
       <ul>
-        <li>Predictable</li>
         <li>
           <a
             href="http://slides.com/davidkhourshid/finite-state-machines#/22"
@@ -104,7 +100,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
-## I got this from the designer
+## I got a lot of these from my designer
 
 <Image
   src={require('file-loader!./images/designers-flow-diagram.png')}
