--- a/demo-a.mdx
+++ b/demo-a.mdx
@@ -3,6 +3,16 @@ import { App } from './demo-a/App.js'
 import { App as AppWithMachine } from './demo-a/AppWithMachine.js'
 import { CodeSurferLayout } from 'code-surfer'
 
+# Let's start the journey! 🛣
+
+Each step consists of:
+
+1. Conventional implementation using Hooks ⚛️
+2. State Machine definition ⚙️
+3. State Machine integration 🛠
+
+---
+
 # Requirement 1️⃣
 
 ## Toggle Modal Visibility 👀
