--- a/introduction.mdx
+++ b/introduction.mdx
@@ -55,19 +55,6 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
-# Problem Statement
-
-<ul>
-  <Appear>
-    <li>Complex UI flows require multiple states</li>
-    <li>Multiple states are generally too implicit</li>
-    <li>Implicit codes are harder to reason about</li>
-    <li>This causes hidden bugs everywhere due to "invisible states"</li>
-  </Appear>
-</ul>
-
----
-
 # What is State Machines?
 
 <ul>
@@ -100,7 +87,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
-## I got a lot of these from my designer
+## I got a lot of these from my designer 🤯
 
 <Image
   src={require('file-loader!./images/designers-flow-diagram.png')}
@@ -110,18 +97,51 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 ---
 
+#### State Machines provide a common language for designers & developers 😍
+
+<Image
+  src={require('file-loader!./images/user-flow.gif')}
+  style={{
+    margin: 'auto',
+    height: '70vh',
+    backgroundSize: 'contain',
+  }}
+/>
+
+<small>
+  Source:{' '}
+  <a href="https://dribbble.com/shots/1871910-User-Flow-Part-1">
+    https://dribbble.com/shots/1871910-User-Flow-Part-1
+  </a>
+</small>
+
+---
+
+# Problem Statement 🤯
+
+<ul>
+  <Appear>
+    <li>Complex UI flows require multiple states</li>
+    <li>Multiple states are generally too implicit</li>
+    <li>Implicit codes are harder to reason about</li>
+    <li>This causes hidden bugs everywhere due to "invisible states"</li>
+  </Appear>
+</ul>
+
+---
+
 # State Machines to the Rescue!
 
 ## 🦸‍♂️ 🦸‍♀️
 
 ---
 
-# Hypothesis
+# Hypothesis 🤔
 
 <ul>
   <Appear>
-    <li>State machines make all states are visible</li>
-    <li>No invisible states means no hidden bugs</li>
+    <li>State machines make all states are visible 👀</li>
+    <li>No invisible states means no hidden bugs 🤞</li>
   </Appear>
 </ul>
 
