Add emojis into conclusion slides

--- a/conclusion.mdx
+++ b/conclusion.mdx
@@ -1,45 +1,41 @@
 import { Appear } from 'mdx-deck'
 
-# Advantages
+# Advantages 🤑
 
 <ul>
   <Appear>
-    <li>Now all states are visible!</li>
-    <li>Easier to test</li>
-    <li>All state transitions are well-tested</li>
-    <li>Is it bug free, as promised?</li>
+    <li>Now all states are visible! 👀</li>
+    <li>Easier to test 🧪</li>
+    <li>All state transitions are well-tested 💯</li>
+    <li>Is it bug free, as promised? ❓</li>
   </Appear>
 </ul>
 
 ---
 
-# Caution!
+# Caution! ⚠️
 
 <ul>
-  <li>It's not completely bug free</li>
+  <li>It's not completely bug free 😧</li>
   <Appear>
     <li>
-      Remaining bugs due to discrepancies between the state & the rendered views
+      There are still discrepancies between the state & the rendered views
     </li>
-    <li>For instance:</li>
-    <li>
-      We should have tested the rendered views from every particular states as
-      well
-    </li>
+    <li>We should have tested the rendered views as well</li>
     <li>Consider Integration Tests</li>
   </Appear>
 </ul>
 
 ---
 
-# Lessons Learned
+# Lessons Learned 📝
 
 <ul>
   <Appear>
-    <li>State Machines must be designed thoroughly</li>
+    <li>State Machines must be designed thoroughly 🧐</li>
     <li>
       Yes, it's easier to test the states, but don't forget to test the rendered
-      views!
+      views! ⚠️
     </li>
     <li>
       There's no silver bullet: Just as other solutions out there, e.g.
@@ -67,13 +63,13 @@ import { Appear } from 'mdx-deck'
 
 ---
 
-# Key Takeaways
+# Key Takeaways 🔑
 
 <ul>
   <Appear>
-    <li>Use State Machines sparingly</li>
-    <li>Isolate State management into Custom Hooks</li>
-    <li>Always test your code thoroughly</li>
+    <li>Use State Machines sparingly ⚠️</li>
+    <li>Isolate State management into Custom Hooks ⚛️</li>
+    <li>Always test your code thoroughly 🧪</li>
   </Appear>
 </ul>
 
@@ -85,14 +81,14 @@ import { Appear } from 'mdx-deck'
 
 ---
 
-# Further Reading
+# Further Reading 📚
 
 - [xstate](https://xstate.js.org/docs/#why) for more State Machines concepts & practices
 - [Testing Trophy](https://kentcdodds.com/blog/write-tests) by Kent C. Dodds
 
 ---
 
-# Thank You
+# Thank You 🙏🏼
 
 - David Khourshid [@davidkpiano](https://twitter.com/davidkpiano)<br />
   for his amazing [xstate](https://xstate.js.org/) library
