Add expressions in between implementations

--- a/demo-b.mdx
+++ b/demo-b.mdx
@@ -153,6 +153,10 @@ export const App = () => {
 
 ---
 
+# Still manageable 👌🏼
+
+---
+
 ## Differentiate View & Edit Screens 📝
 
 ### with State Machine
@@ -400,7 +404,7 @@ export const App = () => {
 }
 ```
 
-```jsx 7,14:15,16 title="2️⃣ App with State Machine 🛠"
+```jsx 14:15,16 title="2️⃣ App with State Machine 🛠"
 import React from 'react'
 import { Button, Modal } from '../shared/Components'
 import { useMachine } from '../shared/useMachine'
