Rephrase the hypothesis

--- a/conclusion.mdx
+++ b/conclusion.mdx
@@ -7,7 +7,7 @@ import { Appear } from 'mdx-deck'
     <li>Now all states are visible! 👀</li>
     <li>Easier to test 🧪</li>
     <li>All state transitions are well-tested 💯</li>
-    <li>Is it bug free, as promised? ❓</li>
+    <li>Is it bug free, as I hypothesized? ❓</li>
   </Appear>
 </ul>
 
