--- a/introduction.mdx
+++ b/introduction.mdx
@@ -27,7 +27,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 - A _very_ brief introduction to State Machines
 - A small replica of my personal journey with:
-  - State Machines, especially [xstate](https://xstate.js.org/) in particular
+  - State Machines, especially [xstate](https://Xstate.js.org/) in particular
   - [React Hooks](https://reactjs.org/docs/hooks-intro.html)
 - How to combine them together
   - **A LOT** of code, buckle up!
